--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body{
+      overflow: hidden;
       margin: 0;
     }
   </style>
